--- a/css/vertical-layout-light/style.css
+++ b/css/vertical-layout-light/style.css
@@ -28323,7 +28323,7 @@ div.tagsinput span.tag a {
 }
 
 .auth .auth-form-light {
-  background: #ffffff;
+  background: #FCFDFD;
 }
 
 .auth .auth-form-light select {
